--- a/WebContent/html-design/login_two_columns.html
+++ b/WebContent/html-design/login_two_columns.html
@@ -43,12 +43,12 @@
             </div>
             <div class="col-md-6">
                 <div class="ibox-content">
-                    <form class="m-t" role="form" action="index.html">
+                    <form class="m-t" role="form" action="login.jsp">
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Username" required="">
+                            <input type="email" class="form-control" name="userName" placeholder="Username" required="">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Password" required="">
+                            <input type="password" class="form-control" name="password" placeholder="Password" required="">
                         </div>
                         <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
@@ -78,6 +78,12 @@
         </div>
     </div>
 
+    <script src="html-design/js/jquery-2.1.1.js"></script>
+    <script>
+        $.get("/login",function(data){
+            console.log(data)
+        })
+    </script>
 </body>
 
 </html>
