--- a/WebContent/html-design/login_two_columns.html
+++ b/WebContent/html-design/login_two_columns.html
@@ -45,7 +45,7 @@
                 <div class="ibox-content">
                     <form class="m-t" role="form" action="login.jsp">
                         <div class="form-group">
-                            <input type="email" class="form-control" name="userName" placeholder="Username" required="">
+                            <input type="email" class="form-control" name="username" placeholder="Username" required="">
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control" name="password" placeholder="Password" required="">
