--- a/WebContent/public/themes/Inspinia/form_wizard.html
+++ b/WebContent/public/themes/Inspinia/form_wizard.html
@@ -498,7 +498,7 @@
                                         <div class="col-lg-8">
                                             <div class="form-group">
                                                 <label>Username *</label>
-                                                <input id="userName" name="userName" type="text" class="form-control required">
+                                                <input id="username" name="username" type="text" class="form-control required">
                                             </div>
                                             <div class="form-group">
                                                 <label>Password *</label>
