--- a/WebContent/public/login_two_columns.html
+++ b/WebContent/public/login_two_columns.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <script src="html-design/js/jquery-2.1.1.js"></script>
+    <script src="public/js/jquery-2.1.1.js"></script>
     <script>
         $.get("/login",function(data){
             console.log(data)
