--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -178,7 +178,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="chat-message right">
-                                                        <img class="message-avatar" src="img/a4.jpg" alt="">
+                                                        <img class="message-avatar" src="public/img/a4.jpg" alt="">
                                                         <div class="message">
                                                             <a class="message-author" href="#"> Karl Jordan </a>
                                                             <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
@@ -229,7 +229,7 @@
                 
                                                     <div class="users-list">
                                                         <div class="chat-user">
-                                                            <img class="chat-avatar" src="img/a4.jpg" alt="">
+                                                            <img class="chat-avatar" src="public/img/a4.jpg" alt="">
                                                             <div class="chat-user-name">
                                                                 <a href="#">Karl Jordan</a>
                                                             </div>
