--- a/WebContent/public/profile.html
+++ b/WebContent/public/profile.html
@@ -192,7 +192,7 @@
         
                                             <div class="feed-element">
                                                 <a href="#" class="pull-left">
-                                                    <img alt="image" class="img-circle" src="img/profile.jpg">
+                                                    <img alt="image" class="img-circle" src="public/img/profile.jpg">
                                                 </a>
                                                 <div class="media-body ">
                                                     <small class="pull-right">5m ago</small>
@@ -237,7 +237,7 @@
                                             </div>
                                             <div class="feed-element">
                                                 <a href="#" class="pull-left">
-                                                    <img alt="image" class="img-circle" src="img/a4.jpg">
+                                                    <img alt="image" class="img-circle" src="public/img/a4.jpg">
                                                 </a>
                                                 <div class="media-body ">
                                                     <small class="pull-right text-navy">5h ago</small>
@@ -268,7 +268,7 @@
                                             </div>
                                             <div class="feed-element">
                                                 <a href="#" class="pull-left">
-                                                    <img alt="image" class="img-circle" src="img/profile.jpg">
+                                                    <img alt="image" class="img-circle" src="public/img/profile.jpg">
                                                 </a>
                                                 <div class="media-body ">
                                                     <small class="pull-right">23h ago</small>
@@ -278,7 +278,7 @@
                                             </div>
                                             <div class="feed-element">
                                                 <a href="#" class="pull-left">
-                                                    <img alt="image" class="img-circle" src="img/a7.jpg">
+                                                    <img alt="image" class="img-circle" src="public/img/a7.jpg">
                                                 </a>
                                                 <div class="media-body ">
                                                     <small class="pull-right">46h ago</small>
